Page de logros acabada, editar perfil sin backend, prettier instalado y ejecutado, refactorización backend, refactorizacion front

--- a/frontend/simpled/app/globals.css
+++ b/frontend/simpled/app/globals.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -132,7 +132,7 @@ h6 {
   }
 }
 
-input[type="date"]::-webkit-calendar-picker-indicator {
+input[type='date']::-webkit-calendar-picker-indicator {
   background-color: var(--foreground);
   border-radius: 50%;
 }
