--- a/frontend/simpled/app/globals.css
+++ b/frontend/simpled/app/globals.css
@@ -166,7 +166,7 @@ input[type='date']::-webkit-calendar-picker-indicator {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
-.gantt-today-line {
+/* .gantt-today-line {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -174,7 +174,7 @@ input[type='date']::-webkit-calendar-picker-indicator {
   background-color: rgba(239, 68, 68, 0.8);
   z-index: 10;
   pointer-events: none;
-}
+} */
 
 .gantt-today-label {
   position: absolute;
